--- a/src/main/resources/templates/system/user/user_list.html
+++ b/src/main/resources/templates/system/user/user_list.html
@@ -14,23 +14,39 @@
 						<el-form-item th:label="#{帐号ID}"><el-input v-model="form.accountId"></el-input></el-form-item>
 					</el-col>
 					<el-col :span="5">
-						<el-form-item th:label="#{用户名称}"><el-input v-model="form.accountNm"></el-input></el-form-item>
-					</el-col>
-				</el-row>
-				<el-row>
-					<el-col :span="5">
 						<el-form-item th:label="#{是否可用}">
 							<el-checkbox-group v-model="form.enabled" size="small">
-								<el-checkbox th:label="可用" name="enabled" border checked></el-checkbox>
-								<el-checkbox th:label="不可用" name="enabled" border checked></el-checkbox>
+								<el-checkbox th:label="#{可用}" name="enabled" border checked></el-checkbox>
+								<el-checkbox th:label="#{不可用}" name="enabled" border checked></el-checkbox>
 							</el-checkbox-group>
 						</el-form-item>
 					</el-col>
 					<el-col :span="5">
+						<el-form-item th:label="#{是否过期}">
+							<el-checkbox-group v-model="form.nonExpired" size="small">
+								<el-checkbox th:label="#{过期}" name="nonExpired" border checked></el-checkbox>
+								<el-checkbox th:label="#{未过期}" name="nonExpired" border checked></el-checkbox>
+							</el-checkbox-group>
+						</el-form-item>
+					</el-col>
+				</el-row>
+				<el-row>
+					<el-col :span="5">
+						<el-form-item th:label="#{用户名称}"><el-input v-model="form.accountNm"></el-input></el-form-item>
+					</el-col>
+					<el-col :span="5">
 						<el-form-item th:label="#{是否锁定}">
 							<el-checkbox-group v-model="form.nonLocked" size="small">
-								<el-checkbox th:label="锁定" name="nonLocked" border checked></el-checkbox>
-								<el-checkbox th:label="未锁定" name="nonLocked" border checked></el-checkbox>
+								<el-checkbox th:label="#{锁定}" name="nonLocked" border checked></el-checkbox>
+								<el-checkbox th:label="#{未锁定}" name="nonLocked" border checked></el-checkbox>
+							</el-checkbox-group>
+						</el-form-item>
+					</el-col>
+					<el-col :span="5">
+						<el-form-item th:label="#{凭证是否过期}">
+							<el-checkbox-group v-model="form.credentialsNonExpired" size="small">
+								<el-checkbox th:label="#{过期}" name="credentialsNonExpired" border checked></el-checkbox>
+								<el-checkbox th:label="#{未过期}" name="credentialsNonExpired" border checked></el-checkbox>
 							</el-checkbox-group>
 						</el-form-item>
 					</el-col>
@@ -50,12 +66,19 @@
 		<!-- 列表 -->
 		<el-table id="table" :data="tableData" style="width: 100%" height="300" size="small"
 				border stripe highlight-current-row @current-change="handleCurrentChange"
-				tooltip-effect="dark" :default-sort = "{prop: 'date', order: 'descending'}">
-			<el-table-column type="selection" sortable width="36"></el-table-column>
-			<el-table-column fixed prop="date" label="日期" ></el-table-column>
-			<el-table-column prop="date" label="日期" ></el-table-column>
-			<el-table-column prop="date" label="日期" ></el-table-column>
-			<el-table-column prop="date" label="日期" ></el-table-column>
+				tooltip-effect="dark" th:empty-text="#{暂无数据}">
+			<el-table-column type="index" sortable width="36" fixed></el-table-column>
+			<el-table-column type="selection" width="36" fixed></el-table-column>
+			<el-table-column prop="accountCd" th:label="#{帐号CD}" sortable fixed></el-table-column>
+			<el-table-column prop="accountId" th:label="#{帐号ID}" sortable fixed></el-table-column>
+			<el-table-column prop="accountNm" th:label="#{用户名称}" sortable></el-table-column>
+			<el-table-column prop="userBirthday" th:label="#{生日}" ></el-table-column>
+			<el-table-column prop="userPhoto" th:label="#{照片}" ></el-table-column>
+			<el-table-column prop="date" th:label="#{是否可用}" ></el-table-column>
+			<el-table-column prop="nonLocked" th:label="#{是否锁定}" ></el-table-column>
+			<el-table-column prop="nonExpired" th:label="#{是否过期}" ></el-table-column>
+			<el-table-column prop="credentialsNonExpired" th:label="#{凭证是否过期}" ></el-table-column>
+			<el-table-column prop="userDesc" th:label="#{介绍}" ></el-table-column>
 		</el-table>
 	</div>
 	
@@ -76,16 +99,19 @@
 						nonExpired: [],
 						credentialsNonExpired: []
 					},
-					tableData: [{
-						date: '234'
-					},{
-						date: '234'
-					},{
-						date: '234'
-					}]
+					tableData: []
 				}
 			},
+			created: function () {
+				
+			},
 			methods: {
+				search() {
+					// 检索
+					axiosUtil.post("/mainMenu", vue.form, function (result) {
+						vue.tableData = result;
+					}, this, true);
+				}
 				handleCurrentChange(val) {
 					this.currentRow = val;
 				}
